--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "http-errors": "^2.0.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.22"
   },
